# FilOzTimeTrackingUtils

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
filoz_time_tracking/: __init__.py  config.py  export_timing_report.py  google_sheet.py  import_timing_export.py  sheet_format.py  timing_format.py
specs/002-timing-xlsx-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-timing-xlsx-export/checklists/: requirements.md
specs/002-timing-xlsx-export/contracts/: cli-export-timing.md
